force-app/main/default/objects/Contact/fields/Responsible_Products__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Products__c</fullName>
    <label>Responsible Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>