force-app/main/default/objects/Contact/fields/Whether_Receive_Email__c.field-meta.xml
<CustomField>
    <fullName>Whether_Receive_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Whether Receive Email</label>
    <type>Checkbox</type>
</CustomField>