force-app/main/default/objects/Contact/listViews/AR_Rainbow_B.listView-meta.xml
<ListView>
    <fullName>AR_Rainbow_B</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Model__c</field>
        <operation>contains</operation>
        <value>Model B</value>
    </filters>
    <filters>
        <field>Account.Country__c</field>
        <operation>equals</operation>
        <value>Argentina</value>
    </filters>
    <label>AR Rainbow B</label>
    <sharedTo>
        <group>X5070</group>
        <role>Argentina_Area_Head</role>
        <role>Argentina_Credit_Control_Manager</role>
        <role>Argentina_Rainbow_Agro_General_Manager</role>
    </sharedTo>
</ListView>