force-app/main/default/objects/Contact/listViews/Mx_Agroterrum_C.listView-meta.xml
<ListView>
    <fullName>Mx_Agroterrum_C</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Model__c</field>
        <operation>contains</operation>
        <value>Model C</value>
    </filters>
    <filters>
        <field>Account.Country__c</field>
        <operation>equals</operation>
        <value>Mexico</value>
    </filters>
    <label>MX Agroterrum C</label>
    <sharedTo>
        <group>X3020</group>
        <role>HQ_President</role>
        <role>Mexico_Area_Head</role>
        <role>Mexico_BackOffice_Finance</role>
        <role>Mexico_Country_Manager</role>
        <role>Mexico_Rainbow_Agro_Logistics</role>
    </sharedTo>
</ListView>