force-app/main/default/objects/Contact/listViews/MX_Rainbow_B.listView-meta.xml
<ListView>
    <fullName>MX_Rainbow_B</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Model__c</field>
        <operation>contains</operation>
        <value>Model B</value>
    </filters>
    <filters>
        <field>Account.Country__c</field>
        <operation>equals</operation>
        <value>Mexico</value>
    </filters>
    <label>MX Rainbow B</label>
    <sharedTo>
        <group>X3010</group>
        <role>Mexico_Area_Head</role>
        <role>Mexico_Country_Manager</role>
        <role>Mexico_Rainbow_Agro_Logistics</role>
    </sharedTo>
</ListView>