force-app/main/default/objects/Contact/listViews/Mx_Rainbow_C_plus.listView-meta.xml
<ListView>
    <fullName>Mx_Rainbow_C_plus</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Model__c</field>
        <operation>contains</operation>
        <value>Model C+</value>
    </filters>
    <filters>
        <field>Account.Country__c</field>
        <operation>equals</operation>
        <value>Mexico</value>
    </filters>
    <label>MX Rainbow C Plus</label>
    <sharedTo>
        <group>X3011</group>
        <role>Argentina_Rainbow_Agro_Marketing</role>
        <role>Mexico_Area_Head</role>
        <role>Mexico_BackOffice_Finance</role>
        <role>Mexico_Country_Manager</role>
        <role>Mexico_Rainbow_Agro_Logistics</role>
    </sharedTo>
</ListView>